# plutus-apps

./: README.adoc  cabal.project  dbsync-out.txt  dbsync-query.sh  default.nix  flake.nix  indexer-out.txt  shell.nix
cardano-streaming/: cardano-streaming.cabal
cardano-streaming/src/Cardano/: Streaming.hs
doc/: conf.py
doc/plutus/tutorials/: basic-apps.rst
marconi/: marconi.cabal
marconi-mamba/src/Marconi/Api/: UtxoIndexersQuery.hs
marconi/src/Marconi/: Indexers.hs
marconi/src/Marconi/Index/: ScriptTx.hs  StakePoolDelegation.hs
marconi/src/Marconi/Streaming/: ChainSync.hs
marconi/test/: Helpers.hs  Integration.hs  Spec.hs  StakePoolDelegation.hs
nix/pkgs/: default.nix
nix/pkgs/haskell/: haskell.nix
plutus-contract/src/Wallet/Emulator/: Chain.hs
plutus-ledger-constraints/src/Ledger/Constraints/: OffChain.hs
plutus-use-cases/test/Spec/: GameStateMachine.hs  Governance.hs
