cabal-version: 3.0
name:          marconi
version:       0.1.0.0
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

author:        Markus Läll
maintainer:    markus.lall@iohk.io
homepage:      https://github.com/input-output-hk/plutus-apps#readme
bug-reports:   https://github.com/input-output-hk/plutus-apps/issues
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/plutus-apps#readme>

build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/plutus-apps

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-import-lists
    -Wnoncanonical-monad-instances -Wredundant-constraints
    -Wunused-packages

library
  import:          lang
  hs-source-dirs:  src
  exposed-modules:
    Marconi.CLI
    Marconi.Index.Datum
    Marconi.Index.ScriptTx
    Marconi.Index.StakePoolDelegation
    Marconi.Index.Utxo
    Marconi.Indexers
    Marconi.Logging
    Marconi.Orphans
    Marconi.Streaming.ChainSync
    Marconi.Types

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-streaming
    , rewindable-index

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api
    , cardano-binary
    , cardano-ledger-alonzo
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-ledger-shelley-ma
    , cardano-prelude
    , cardano-slotting
    , iohk-monitoring
    , ouroboros-consensus
    , ouroboros-consensus-byron
    , ouroboros-consensus-cardano
    , ouroboros-consensus-shelley
    , ouroboros-network
    , plutus-ledger-api
    , vector-map

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , base
    , bytestring
    , containers
    , lens
    , mwc-random
    , optparse-applicative
    , prettyprinter
    , primitive
    , serialise
    , sqlite-simple
    , stm
    , streaming
    , text
    , time
    , transformers
    , vector

executable marconi
  import:         lang
  hs-source-dirs: app
  main-is:        Main.hs

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-streaming
    , marconi

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api
    , iohk-monitoring

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , base                  >=4.9 && <5
    , optparse-applicative
    , prettyprinter

test-suite marconi-test
  import:         lang
  ghc-options:    -Wno-unused-packages
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  other-modules:
    Helpers
    Integration
    StakePoolDelegation

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-streaming
    , marconi

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api:{cardano-api, gen}
    , cardano-testnet
    , iohk-monitoring
    , ouroboros-network
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , base             >=4.9 && <5
    , bytestring
    , containers
    , directory
    , filepath
    , hedgehog
    , hedgehog-extras
    , prettyprinter
    , serialise
    , stm
    , streaming
    , tasty
    , tasty-hedgehog
    , temporary
